redesign skip question

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -342,3 +342,7 @@
         {#        <div class="col-lg-3"></div>#}
     </div>
 {% endblock %}
+
+{% block script %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
+{% endblock %}
