--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -104,7 +104,7 @@
                             <div class="question-alert text-right">
                                 <img src="{% static 'img/researcher/warning.svg' %}" alt="warning">
                                 <span>
-                                    در صورت بروز هر گونه مشکل، می‌توانید با شماره تلفن 28422245 (داخلی 230) تماس حاصل
+                                    در صورت بروز هر گونه مشکل، می‌توانید با شماره تلفن <a href="tel:09102143451">09102143451</a> تماس حاصل
                                     فرمایید.
                                 </span>
                             </div>
