--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4949,3 +4949,27 @@ img.center-head {
 .dir-rtl {
     direction: rtl !important;
 }
+
+.code {
+    font-size: 2em;
+    border: none;
+    height: unset;
+    line-height: 2em;
+    border-bottom: 2px solid #bdbdbd;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.code:focus {
+    border: none;
+    border-bottom: 2px solid #3CCD1C;
+}
+
+.c-digit-container {
+direction: ltr;
+}
+
+.code.c-digit {
+    width: 3rem;
+
+}
