change user infos buttons position

--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -52,6 +52,11 @@
         <div class="row">
             <div class="col-12 text-right">
                 <h3 class="h3 p-top-15">اطلاعات کاربری</h3>
+                <button type="submit" class="top-page-button border-button"
+                        style="position: absolute;left: 0;top: 0;">
+                    <i class="fas fa-check"></i>
+                    اعمال تغییرات
+                </button>
             </div>
         </div>
         <div class="row">
@@ -68,11 +73,6 @@
                            role="tab"
                            aria-controls="nav-upload" aria-selected="false">بارگذاری رزومه</a>
                     </div>
-                    <button type="submit" class="top-page-button border-button mt-0"
-                            style="position: absolute;left: 0;top: 0;">
-                        <i class="fas fa-check"></i>
-                        اعمال تغییرات
-                    </button>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-personal-info" role="tabpanel"
@@ -250,6 +250,9 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق علمی</h6>
+                                <button type="button" class="education-btn btn p-0 float-left" >
+                                    <i class="fas fa-plus"></i>
+                                </button>
                             </div>
                             <div class="box-body">
                                 <div class="row">
@@ -290,7 +293,6 @@
                                                 </table>
                                             {% endif %}
                                         </div>
-                                        <button type="button" class="education-btn  border-button pr-5 pl-5">افزودن</button>
                                     </div>
                                 </div>
                             </div>
@@ -298,6 +300,9 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق اجرایی</h6>
+                                <button type="button" class="executive-btn btn p-0 float-left" >
+                                    <i class="fas fa-plus"></i>
+                                </button>
                             </div>
                             <div class="box-body">
                                 <div class="row">
@@ -338,7 +343,6 @@
                                                 </table>
                                             {% endif %}
                                         </div>
-                                        <button type="button" class="executive-btn  border-button pr-5 pl-5">افزودن</button>
                                     </div>
                                 </div>
                             </div>
@@ -346,6 +350,9 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق پژوهشی</h6>
+                                <button type="button" class="research-btn btn p-0 float-left" >
+                                    <i class="fas fa-plus"></i>
+                                </button>
                             </div>
                             <div class="box-body">
                                 <div class="row">
@@ -382,7 +389,6 @@
                                                 </table>
                                             {% endif %}
                                         </div>
-                                        <button type="button" class="research-btn  border-button pr-5 pl-5">افزودن</button>
                                     </div>
                                 </div>
                             </div>
@@ -400,6 +406,9 @@
                                               d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"></path>
                                     </svg>
                                     <span>استخراج اطلاعات از سامانه علم سنجی</span>
+                                </button>
+                                <button type="button" class="paper-btn btn p-0 float-left" >
+                                    <i class="fas fa-plus"></i>
                                 </button>
                             </div>
                             <div class="box-body">
@@ -442,7 +451,6 @@
                                             {% endif %}
 
                                         </div>
-                                        <button type="button" class="paper-btn  border-button pr-5 pl-5">افزودن</button>
                                     </div>
                                 </div>
                             </div>
