--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -22,6 +22,11 @@
         <div class="row">
             <div class="col-12 text-right">
                 <h3 class="h3 p-top-15">اطلاعات کاربری</h3>
+                <button type="submit" class="top-page-button border-button"
+                        style="position: absolute;left: 0;top: 0;">
+                    <i class="fas fa-check"></i>
+                    اعمال تغییرات
+                </button>
             </div>
         </div>
         <div class="row">
@@ -38,11 +43,6 @@
                            role="tab"
                            aria-controls="nav-upload" aria-selected="false">بارگذاری رزومه</a>
                     </div>
-                    <button type="submit" class="top-page-button border-button mt-0"
-                            style="position: absolute;left: 0;top: 0;">
-                        <i class="fas fa-check"></i>
-                        اعمال تغییرات
-                    </button>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-personal-info" role="tabpanel"
@@ -177,6 +177,9 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق علمی</h6>
+                                <button type="button" class="education-btn btn p-0 float-left" >
+                                    <i class="fas fa-plus"></i>
+                                </button>
                             </div>
                             <div class="box-body">
                                 <div class="row">
@@ -218,8 +221,6 @@
                                                         class="fas fa-plus"></i>  کلیک کنید!  </span>
                                             {% endif %}
                                         </div>
-                                        <button type="button" class="education-btn border-button pr-5 pl-5">افزودن
-                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -227,6 +228,9 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق اجرایی</h6>
+                                <button type="button" class="executive-btn btn p-0 float-left" >
+                                    <i class="fas fa-plus"></i>
+                                </button>
                             </div>
                             <div class="box-body">
                                 <div class="row">
@@ -267,8 +271,6 @@
                                                         class="fas fa-plus"></i>  کلیک کنید!  </span>
                                             {% endif %}
                                         </div>
-                                        <button type="button" class="executive-btn border-button pr-5 pl-5">افزودن
-                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -276,6 +278,9 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق پژوهشی</h6>
+                                <button type="button" class="research-btn btn p-0 float-left" >
+                                    <i class="fas fa-plus"></i>
+                                </button>
                             </div>
                             <div class="box-body">
                                 <div class="row">
@@ -320,8 +325,6 @@
                                                         class="fas fa-plus"></i>  کلیک کنید!  </span>
                                             {% endif %}
                                         </div>
-                                        <button type="button" class="research-btn border-button pr-5 pl-5">افزودن
-                                        </button>
                                     </div>
                                 </div>
                             </div>
