--- a/expert/templates/expert/layouts/add_new_question.html
+++ b/expert/templates/expert/layouts/add_new_question.html
@@ -9,7 +9,7 @@
             </div>
             <form method="post" enctype="multipart/form-data" class="ajax-new-rq-form" data-url="{% url 'expert:new_research_question' %}">
                 {% csrf_token %}
-                <div class="modal-body">
+                <div class="modal-body pr-4 pl-4">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group">
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer pl-4 pr-4">
                     <button class="btn reject-btn" type="reset" data-dismiss="modal">لغو</button>
                     <button class="btn btn-primary save-btn" type="submit">افزودن</button>
                 </div>
