debug preview of field in signup

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -58,7 +58,7 @@
                         </p>
                     </form>
                 </div>
-                <div class="item" id="signup">
+                <div class="item">
                     <form method="post" action="" novalidate class="sign-up-ajax"
                           data-url="{% url 'chamran:signup_email' %}">
                         <h6 class="text-right">ساخت حساب کاربری</h6>
