--- a/researcher/templates/researcher/layouts/scientific_form.html
+++ b/researcher/templates/researcher/layouts/scientific_form.html
@@ -9,31 +9,31 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-6">
-                        <div class='row'>
+                        <div class='row edu-section'>
                             <div class='col-lg-12'>
                                 <label for="edu-section">مقطع تحصیلی</label>
                                 <input type="text" id="edu-section" class="w-100" name="grade">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row edu-subject">
                             <div class='col-lg-12'>
                                 <label for="edu-subject">رشته تحصیلی</label>
                                 <input type="text" id="edu-subject" class="w-100" name="major">
                             </div>
                         </div>
-                        <div class='row'>
+                        <div class='row university'>
                             <div class='col-lg-12'>
                                 <label for="university">دانشگاه</label>
                                 <input type="text" id="university" class="w-100" name="university">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row edu-city">
                             <div class='col-lg-12'>
                                 <label for="edu-city">شهر محل تحصیل</label>
                                 <input type="text" id="edu-city" class="w-100" name="place">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row year">
                             <div class='col-lg-12'>
                                 <label for="year">سال اخذ مدرک</label>
                                 <input type="text" id="year" class="w-100" name="graduated_year">
