--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -212,7 +212,7 @@
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <label for="Email">پست الکترونیکی</label>
-                                            {{ expert_info_form.email_address|attr:"id:Email"|attr:"readonly:True"|attr:"class:w-100" }}
+                                            <input type="email" class="w-100" id="Email" value={{request.user.expertuser}} readonly=true>
                                         </div>
                                     </div>
                                 </div>
