--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -84,7 +84,7 @@
                                 <div class="col-lg-12">
                                     <div class="form-group">
                                         <label for="id_address">آدرس</label>
-                                        {% render_field RandD_form.address dir="rtl" rows="3" class="w-100" readonly="true" %}
+                                        {% render_field RandD_form.address dir="rtl" rows="3" class="w-100" %}
                                     </div>
                                 </div>
                             </div>
