--- a/researcher/templates/researcher/layouts/executive_form.html
+++ b/researcher/templates/researcher/layouts/executive_form.html
@@ -8,7 +8,7 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-6">
-                        <div class='row'>
+                        <div class='row duty'>
                             <div class='col-lg-12'>
                                 <label for='duty'>سمت</label>
                                 <input type='text' id='duty' class='w-100' name="post">
@@ -18,23 +18,23 @@
                             <div class='col-lg-2'>
                                 <span class='center-vr'>زمان :</span>
                             </div>
-                            <div class='col-lg-5'>
+                            <div class='col-lg-5 from'>
                                 <label for='from'>از سال</label>
                                 <input type='text' id='from' class='w-100' name="start">
                             </div>
-                            <div class='col-lg-5'>
+                            <div class='col-lg-5 until'>
                                 <label for='until'>تا سال</label>
                                 <input type='text' id='until' class='w-100' name="end">
                             </div>
                         </div>
-                        <div class='row'>
+                        <div class='row workplace'>
                             <div class='col-lg-12'>
                                 <label for='workplace'>نام مجموعه</label>
 
                                 <input type='text' id='workplace' class='w-100' name="place">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row exe-city">
                             <div class='col-lg-12'>
                                 <label for='exe-city'>شهر</label>
                                 <input type='text' id='exe-city' class='w-100' name="city">
