--- a/researcher/templates/researcher/layouts/research_form.html
+++ b/researcher/templates/researcher/layouts/research_form.html
@@ -8,29 +8,29 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-6">
-                        <div class='row'>
+                        <div class='row subject'>
                             <div class='col-lg-12'>
                                 <label for='subject'>عنوان طرح پژوهشی</label>
                                 <input type='text' id='subject' class='w-100' name="title">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row admin">
                             <div class='col-lg-12'>
                                 <label for='admin'>نام مجری</label>
                                 <input type='text' id='admin' class='w-100' name="presenter">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row liable">
                             <div class='col-lg-12'>
                                 <label for='liable'>مسئول اجرا/همکار</label>
                                 <input type='text' id='liable' class='w-100' name="responsible">
                             </div>
                         </div>
-                        <div class='row'>
+                        <div class='row rank'>
                             <div class='col-lg-12 rankDiv'>
                                 <label class='rankLabel' for='rank' style='width:245px'>وضعیت طرح پژوهشی</label>
                                 <select id='rank' name="status">
-                                    <option selected dir='rtl'>انتخاب کنید ...</option>
+                                    <option value="" selected dir='rtl'>انتخاب کنید ...</option>
                                     <option value='1'>در دست  اجرا</option>
                                     <option value='2'>خاتمه یافته</option>
                                     <option value='3'>متوقف</option>
