--- a/researcher/templates/researcher/layouts/skip_question.html
+++ b/researcher/templates/researcher/layouts/skip_question.html
@@ -8,15 +8,16 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form>
+                <form method="post">
+                {% csrf_token %}
                     <p class="text-justify mb-4" dir="rtl">در صورتی که کد عبور از این قسمت را در اختیار دارید می توانید
                         با وارد کردن آن در قسمت زیر از این
                         مرحله بگذرید.</p>
                     <div class="form-group text-center ml-auto mr-auto">
                         <label for="skipCode"></label>
-                        <input type="text" class="code-input text-center" name="skip_code" id="skipCode"
+                        <input type="text" class="code-input text-center" name="accelerator" id="skipCode"
                                placeholder="123456" maxlength="6">
-                        {#                        <input type="text" name="skip_code" value="      " id="skipCode" hidden>#}
+                        {#                        <input type="text" name="accelerator" value="      " id="skipCode" hidden>#}
                         {#                        <label class="c-digit-container text-center w-100">#}
                         {#                            <input type="text" class="text-center code c-digit c-digit-1"#}
                         {#                                   min="0" max="1" pattern="[0-9]{1}" maxlength="1" size="1" placeholder="1">#}
