--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -218,6 +218,28 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group form-check">
+                                    <input type="checkbox" class="form-check-input inp-cbx" id="accessCheck"
+                                           name="access_check" hidden>
+                                    <label class="form-check-label cbx" for="accessCheck">
+                                        <span>
+                                            <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
+                                                 xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                      d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
+                                            </svg>
+                                        </span>
+                                        <span>
+                                            قبل از این که مجموعه
+                                        پژوهشی‌ای بخواهد من را به پروژه‌ای اضافه کند، از من اجازه گرفته
+                                        شود
+                                        </span>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane fade" id="nav-resume" role="tabpanel" aria-labelledby="nav-resume-tab">
                         <div class="card box flow-root-display w-100">
@@ -250,7 +272,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق علمی</h6>
-                                <button type="button" class="education-btn btn p-0 float-left" >
+                                <button type="button" class="education-btn btn p-0 float-left">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -300,7 +322,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق اجرایی</h6>
-                                <button type="button" class="executive-btn btn p-0 float-left" >
+                                <button type="button" class="executive-btn btn p-0 float-left">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -350,7 +372,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق پژوهشی</h6>
-                                <button type="button" class="research-btn btn p-0 float-left" >
+                                <button type="button" class="research-btn btn p-0 float-left">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -407,7 +429,7 @@
                                     </svg>
                                     <span>استخراج اطلاعات از سامانه علم سنجی</span>
                                 </button>
-                                <button type="button" class="paper-btn btn p-0 float-left" >
+                                <button type="button" class="paper-btn btn p-0 float-left">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -587,7 +609,7 @@
                                             </p>
                                             <div class="row">
                                                 <div class="col-md-2"></div>
-                                                <div class="col-md-8">
+                                                <div class="col-md-8 text-center attach__container">
                                                     <div class="form-group text-center font-weight-bold">
                                                         <label class="upload-dash-box" for="uploadResume">
                                                             <svg width="1em" height="1em" viewBox="0 0 16 16"
@@ -602,6 +624,23 @@
                                                         <input type="file" class="form-control-file"
                                                                id="uploadResume" name="resume" hidden>
                                                     </div>
+{#                                                    <div class="attach-box m-auto">#}
+{#                                                        <span class="attach-box__img pdf"></span>#}
+{#                                                        <span class="attach-box__info">#}
+{#                                                            <span class="attach-box__info-name">#}
+{#                                                                Capture#}
+{#                                                            </span>#}
+{#                                                            <span class="attach-box__info-ext">#}
+{#                                                                PNG#}
+{#                                                            </span>#}
+{#                                                        </span>#}
+{#                                                        <span class="attach-box__option">#}
+{#                                                           <a class="attach-box__option-download" href="#">#}
+{#                                                               <i class="fas fa-download"></i>#}
+{#                                                           </a>#}
+{#                                                        </span>#}
+{#                                                    </div>#}
+{#                                                    <button class="btn btn-primary mt-4" type="button" id="changeAttachment">تغییر فایل</button>#}
                                                 </div>
                                             </div>
                                         </div>
