--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -177,7 +177,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق علمی</h6>
-                                <button type="button" class="education-btn btn p-0 float-left" >
+                                <button type="button" class="education-btn btn p-0 float-left">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -228,7 +228,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق اجرایی</h6>
-                                <button type="button" class="executive-btn btn p-0 float-left" >
+                                <button type="button" class="executive-btn btn p-0 float-left">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -278,7 +278,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>سوابق پژوهشی</h6>
-                                <button type="button" class="research-btn btn p-0 float-left" >
+                                <button type="button" class="research-btn btn p-0 float-left">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -359,7 +359,7 @@
                                             </p>
                                             <div class="row">
                                                 <div class="col-md-2"></div>
-                                                <div class="col-md-8">
+                                                <div class="col-md-8 text-center attach__container">
                                                     <div class="form-group text-center font-weight-bold">
                                                         <label class="upload-dash-box" for="uploadResume">
                                                             <svg width="1em" height="1em" viewBox="0 0 16 16"
@@ -374,6 +374,23 @@
                                                         <input type="file" class="form-control-file"
                                                                id="uploadResume" name="resume" hidden>
                                                     </div>
+                                                    {#                                                    <div class="attach-box m-auto">#}
+                                                    {#                                                        <span class="attach-box__img pdf"></span>#}
+                                                    {#                                                        <span class="attach-box__info">#}
+                                                    {#                                                            <span class="attach-box__info-name">#}
+                                                    {#                                                                Capture#}
+                                                    {#                                                            </span>#}
+                                                    {#                                                            <span class="attach-box__info-ext">#}
+                                                    {#                                                                PNG#}
+                                                    {#                                                            </span>#}
+                                                    {#                                                        </span>#}
+                                                    {#                                                        <span class="attach-box__option">#}
+                                                    {#                                                           <a class="attach-box__option-download" href="#">#}
+                                                    {#                                                               <i class="fas fa-download"></i>#}
+                                                    {#                                                           </a>#}
+                                                    {#                                                        </span>#}
+                                                    {#                                                    </div>#}
+                                                    {#                                                    <button class="btn btn-primary mt-4" type="button" id="changeAttachment">تغییر فایل</button>#}
                                                 </div>
                                             </div>
                                         </div>
