--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4562,6 +4562,108 @@ span.border-span {
     margin-top: 0;
 }
 
+.cbx {
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    padding: 6px 8px;
+    border-radius: 6px;
+    overflow: hidden;
+    transition: all 0.2s ease;
+}
+
+.cbx span {
+    float: right;
+    vertical-align: middle;
+    transform: translate3d(0, 0, 0);
+}
+
+.cbx span:first-child {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    border-radius: 4px;
+    transform: scale(1);
+    border: 1px solid #cccfdb;
+    transition: all 0.2s ease;
+    box-shadow: 0 1px 1px rgba(0, 16, 75, 0.05);
+}
+
+.cbx span:first-child svg {
+    position: absolute;
+    top: 1px;
+    left: 0;
+    fill: none;
+    stroke: #fff;
+    stroke-width: 1;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    /*stroke-dasharray: 16px;*/
+    /*stroke-dashoffset: 16px;*/
+    transition: all 0.3s ease;
+    transition-delay: 0.1s;
+    transform: translate3d(0, 0, 0);
+}
+
+.cbx span:last-child {
+    padding-right: 8px;
+    line-height: 18px;
+}
+
+.cbx:hover span:first-child {
+    border-color: #3ccd1c;
+}
+
+.inp-cbx {
+    position: absolute;
+    visibility: hidden;
+}
+
+.inp-cbx:checked + .cbx span:first-child {
+    background: #3ccd1c;
+    border-color: #3ccd1c;
+    animation: wave 0.4s ease;
+}
+
+.inp-cbx:checked + .cbx span:first-child svg {
+    stroke-dashoffset: 0;
+    width: 16px;
+    height: 16px;
+}
+
+.inline-svg {
+    position: absolute;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+    user-select: none;
+}
+
+@-moz-keyframes wave {
+    50% {
+        transform: scale(0.9);
+    }
+}
+
+@-webkit-keyframes wave {
+    50% {
+        transform: scale(0.9);
+    }
+}
+
+@-o-keyframes wave {
+    50% {
+        transform: scale(0.9);
+    }
+}
+
+@keyframes wave {
+    50% {
+        transform: scale(0.9);
+    }
+}
+
+
 input[type="number"] {
     direction: ltr;
     letter-spacing: 1px;
@@ -5053,3 +5155,91 @@ nav[aria-label="breadcrumb"] ol {
     padding-left: 0.5rem;
 }
 
+.attach-box {
+    display: flex;
+    border: 1px dashed #bdbdbd;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    background-color: #F8FDF7;
+    flex-direction: row-reverse;
+    width: fit-content;
+    width: -moz-fit-content;
+}
+
+.attach-box .attach-box__img {
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+}
+
+.attach-box .attach-box__img.pdf {
+    background-image: url("../img/pdf.svg");
+}
+
+.attach-box .attach-box__img.doc {
+    background-image: url("../img/doc.svg");
+}
+
+.attach-box .attach-box__img.gif {
+    background-image: url("../img/gif.svg");
+}
+
+.attach-box .attach-box__img.jpg {
+    background-image: url("../img/jpg.svg");
+}
+
+.attach-box .attach-box__img.png {
+    background-image: url("../img/png.svg");
+}
+
+.attach-box .attach-box__img.ppt {
+    background-image: url("../img/ppt.svg");
+}
+
+.attach-box .attach-box__img.txt {
+    background-image: url("../img/txt.svg");
+}
+
+.attach-box .attach-box__img.unknown {
+    background-image: url("../img/unknown.svg");
+}
+
+.attach-box .attach-box__img.wmv {
+    background-image: url("../img/wmv.svg");
+}
+
+.attach-box .attach-box__img.zip {
+    background-image: url("../img/zip.svg");
+}
+
+.attach-box .attach-box__info {
+    text-align: left;
+    padding-top: 12px;
+    margin-left: 5px;
+    min-width: 120px;
+}
+
+.attach-box .attach-box__info .attach-box__info-name {
+    color: #484848;
+    font-weight: 600;
+    display: block;
+}
+
+.attach-box .attach-box__info .attach-box__info-ext {
+    font-size: 0.85em;
+    display: block;
+    direction: ltr
+}
+
+.attach-box .attach-box__option {
+    padding: 15px;
+}
+
+.attach-box .attach-box__option .attach-box__option-download {
+    color: #bdbdbd;
+    font-size: 1rem;
+}
+
+.attach-box .attach-box__option .attach-box__option-download:hover {
+    color: #3ccd1c;
+}
