add resume file to expert researcher requset Part1

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -179,7 +179,7 @@
                                         </g>
                                     </g>
                                 </svg>
-                                <span>مجموعه پژوهشی</span>
+                                <span>حامی</span>
                             </label>
                         </div>
                         <div class="account_error"></div>
