--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -34,7 +34,7 @@
 {% block modals %}{% endblock %}
 <div class="modal fade" id="feedbackModal" data-backdrop="static" data-keyboard="false" tabindex="-1"
      role="dialog" aria-labelledby="feedbackModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="feedbackModalLabel">ثبت بازخورد</h5>
