--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -51,14 +51,14 @@
                     </div>
                 </div>
                 <div class="row mbottom-lg-25">
-                    <div class="col-3">
+                    <div class="col-md-3">
                         <div class="divide__line text-right">
                             <span class="w__title">تکنیک ها</span>
                             <span class="__line"></span>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <div id="technique-list" style="margin-top: 30px">
+                                <div id="technique-list" class="mt-4 mb-4">
                                     {#                                    <div class="technique-item">#}
                                     {#                                        <span class="technique-name">PCR</span>#}
                                     {#                                        <span class="grade grade__A"></span>#}
@@ -75,28 +75,30 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-9">
+                    <div class="col-md-9">
                         <div class="divide__line text-right">
                             <span class="w__title">سوابق علمی</span>
                             <span class="__line"></span>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <table class="table text-center">
-                                    <thead>
-                                    <tr>
-                                        <td scope="col">رشته تحصیلی</td>
-                                        <td scope="col">مقطع تحصیلی</td>
-                                        <td scope="col">دانشگاه</td>
-                                        <td scope="col">شهر</td>
-                                        <td scope="col">سال ورود</td>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="researcher_scientific_record">
-                                    <tr>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <div class="res-table-container">
+                                    <table class="table text-center">
+                                        <thead>
+                                        <tr>
+                                            <td scope="col">رشته تحصیلی</td>
+                                            <td scope="col">مقطع تحصیلی</td>
+                                            <td scope="col">دانشگاه</td>
+                                            <td scope="col">شهر</td>
+                                            <td scope="col">سال ورود</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="researcher_scientific_record">
+                                        <tr>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                         <div class="divide__line text-right">
@@ -105,32 +107,34 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <table class="table text-center">
-                                    <thead>
-                                    <tr>
-                                        <td scope="col" rowspan="2">
-                                            سمت
-                                        </td>
-                                        <td scope="col" rowspan="2">محل
-                                            خدمت
-                                        </td>
-                                        <td scope="col" rowspan="2">
-                                            شهر
-                                        </td>
-                                        <td scope="col" colspan="2">
-                                            تاریخ
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="col">شروع</td>
-                                        <td scope="col">اتمام</td>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="researcher_executive_record">
-                                    <tr>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <div class="res-table-container">
+                                    <table class="table text-center">
+                                        <thead>
+                                        <tr>
+                                            <td scope="col" rowspan="2">
+                                                سمت
+                                            </td>
+                                            <td scope="col" rowspan="2">محل
+                                                خدمت
+                                            </td>
+                                            <td scope="col" rowspan="2">
+                                                شهر
+                                            </td>
+                                            <td scope="col" colspan="2">
+                                                تاریخ
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="col">شروع</td>
+                                            <td scope="col">اتمام</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="researcher_executive_record">
+                                        <tr>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                         <div class="divide__line text-right">
@@ -139,23 +143,28 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <table class="table text-center">
-                                    <thead>
-                                    <tr>
-                                        <td scope="col">عنوان طرح پژوهشی</td>
-                                        <td scope="col">نام مجری</td>
-                                        <td scope="col">مسئول اجرا/همکار</td>
-                                        <td scope="col">وضعیت طرح پژوهشی</td>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="researcher_research_record">
-                                    <tr>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <div class="res-table-container">
+                                    <table class="table text-center">
+                                        <thead>
+                                        <tr>
+                                            <td scope="col">عنوان طرح پژوهشی</td>
+                                            <td scope="col">نام مجری</td>
+                                            <td scope="col">مسئول اجرا/همکار</td>
+                                            <td scope="col">وضعیت طرح پژوهشی</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="researcher_research_record">
+                                        <tr>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-12" id="researcherInfoResume"></div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12 text-right">
