--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1851,41 +1851,43 @@ hr {
 }
 
 ::-webkit-scrollbar {
+    height: 4px;
     width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: transparent;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #EAEDF0;
+    border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #B3C0CE;
 }
 
-@media (max-width: 767px) {
-    ::-webkit-scrollbar {
-        width: 5px;
-    }
+/*@media (max-width: 767px) {*/
+/*    ::-webkit-scrollbar {*/
+/*        width: 5px;*/
+/*    }*/
 
-    ::-webkit-scrollbar-track {
-        background-color: transparent;
-    }
+/*    ::-webkit-scrollbar-track {*/
+/*        background-color: transparent;*/
+/*    }*/
 
-    ::-webkit-scrollbar-thumb {
-        background: #888;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        border-radius: 5px;
-    }
+/*    ::-webkit-scrollbar-thumb {*/
+/*        background: #888;*/
+/*        -webkit-border-radius: 5px;*/
+/*        -moz-border-radius: 5px;*/
+/*        border-radius: 5px;*/
+/*    }*/
 
-    ::-webkit-scrollbar-thumb:hover {
-        background: #555;
-    }
-}
+/*    ::-webkit-scrollbar-thumb:hover {*/
+/*        background: #555;*/
+/*    }*/
+/*}*/
 
 .wait-item, .delete-item {
     font-size: 12px;
@@ -1921,6 +1923,23 @@ hr {
 
 ::placeholder {
     color: #bdbdbd;
+}
+
+.res-table-container {
+    overflow-x: auto;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.res-table-container table {
+    min-width: 100%;
+    width: max-content;
+    width: -moz-max-content;
+    margin-bottom: 10px !important;
+}
+
+.res-table-container table td {
+    padding: 5px 0.75rem !important;
 }
 
 table {
@@ -4989,6 +5008,12 @@ img.center-head {
     width: 200px;
 }
 
+@media (max-width: 576px) {
+    .modal-resume .user-personal-info .profile img {
+        width: 120px;
+    }
+}
+
 .modal-resume .user-personal-info .information {
     min-height: 200px;
     text-align: right;
@@ -5010,12 +5035,20 @@ img.center-head {
     display: inline-block;
 }
 
-.modal-resume .user-personal-info .information .common-info span:last-child {
-
+@media (max-width: 576px) {
+    .modal-resume .user-personal-info .information .common-info span:last-child {
+        display: block;
+    }
 }
 
 .modal-resume .user-personal-info .request-response {
     margin-top: -35px;
+}
+
+@media (max-width: 576px) {
+    .modal-resume .user-personal-info .request-response {
+        margin-top: 0;
+    }
 }
 
 .modal-resume .user-personal-info .request-response button {
@@ -5237,6 +5270,14 @@ nav[aria-label="breadcrumb"] ol {
     padding-top: 12px;
     margin-left: 5px;
     min-width: 120px;
+    overflow-x: hidden;
+    width: 120px;
+    direction: ltr;
+}
+
+.attach-box .attach-box__info:hover {
+    overflow-x: visible;
+    z-index: 10;
 }
 
 .attach-box .attach-box__info .attach-box__info-name {
